--- a/public/screen.css
+++ b/public/screen.css
@@ -9,4 +9,13 @@ html {
 body {
   margin: 0;
   min-height: 100%;
+  background-image: url('/images/sky-background.jpg');
+  background-size: 100%;
+  font-size: 1.5em;
+  text-align: center;
+}
+
+.title {
+  font-size: 4em;
+  color: rgb(228, 217, 217);
 }
