--- a/public/screen.css
+++ b/public/screen.css
@@ -10,9 +10,10 @@ body {
   margin: 0;
   min-height: 100%;
   background-image: url('/images/sky-background.jpg');
-  background-size: 100%;
+  background-size: auto;
   font-size: 1.5em;
   text-align: center;
+  color: rgb(29, 27, 27);
 }
 
 .title {
