--- a/public/screen.css
+++ b/public/screen.css
@@ -13,7 +13,8 @@ body {
   background-size: auto;
   font-size: 1.5em;
   text-align: center;
-  color: rgb(29, 27, 27);
+  color: rgb(29, 28, 36);
+  font-family: 'Merriweather', serif;
 }
 
 .title {
